<resources>
    <string name="app_name">MemesApp</string>
    <string name="splash_logo">SplashLogo</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="sign_in">Войти</string>
    <string name="password_hint">Пароль должен содержать 6 символов</string>
    <string name="empty_field_error">Поле не может быть пустым</string>
    <string name="password_visibility">Password visibility</string>
    <string name="auth_error">Во время запроса произошла ошибка, возможно вы неверно ввели логин/пароль</string>
    <string name="title">Популярные мемы</string>
    <string name="meme_cells">Лента с мемами</string>
    <string name="add">Добавить мем</string>
    <string name="profile">Профиль</string>
    <string name="text_view_meme">TextViewMeme</string>
    <string name="error_first">Не удалось загрузить ленту</string>
    <string name="error_second">Обновите экран или попробуйте позже.</string>
    <string name="days_ago">%1$d дней назад</string>
</resources>